--- a/debian-slim/Dockerfile
+++ b/debian-slim/Dockerfile
@@ -53,7 +53,7 @@ RUN mv ${APP_HOME}/plugins ${APP_HOME}/default-plugins && \
 RUN mkdir ${APP_HOME}/repository
 
 # Copy the sample applications
-COPY resources/importablePackages/* ${APP_HOME}/importablePackages
+COPY resources/importablePackages/* ${APP_HOME}/importablePackages/
 
 # Set permissions
 RUN chgrp -R 0 ${APP_ROOT} && \
