--- a/xldeploy-k8s/xldeploy.yaml
+++ b/xldeploy-k8s/xldeploy.yaml
@@ -1,15 +1,15 @@
----
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: xldeploy-config
   labels:
     app: xldeploy
+    release: "8.2.1"
 data:
   ADMIN_PASSWORD: admin
   JDBC_USERNAME: xldadministrator
-  JDBC_PASSWORD: xl123admin456
-  JDBC_URL: jdbc:postgresql://xldeploydbpostgres.cjofzmugihxg.us-west-2.rds.amazonaws.com:5432/postgres
+  JDBC_PASSWORD: mysecretpassword
+  JDBC_URL: jdbc:postgresql://postgres:5432/postgres
   JDBC_DRIVER: org.postgresql.Driver
 ---
 apiVersion: v1
@@ -18,31 +18,30 @@ metadata:
   name: xld-pv-claim-configuration
   labels:
     app: xldeploy
+    release: "8.2.1"
 spec:
+  #storageClassName: gp2
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Mi
+      storage: 10Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: xldeploy-deployment
-  labels:
-    app: xldeploy
-    release: 8.2.1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: xldeploy
-      release: 8.2.1
+      release: "8.2.1"
   template:
     metadata:
       labels:
         app: xldeploy
-        release: 8.2.1
+        release: "8.2.1"
     spec:
       containers:
       - name: xldeploy
@@ -83,7 +82,7 @@ metadata:
   name: xld-service
   labels:
     app: xldeploy
-    release: 8.2.1
+    release: "8.2.1"
 spec:
   type: LoadBalancer
   ports:
@@ -93,5 +92,4 @@ spec:
       name: xld-http-svc
   selector:
     app: xldeploy
-    release: 8.2.1
---
+    release: "8.2.1"
