--- a/xldeploy-k8s/db/postgres-configmap.yaml
+++ b/xldeploy-k8s/db/postgres-configmap.yaml
@@ -4,7 +4,9 @@ metadata:
   name: postgres-config
   labels:
     app: postgres
+    release: "10.4"
 data:
   POSTGRES_DB: postgres
-  POSTGRES_USER: postgres
+  POSTGRES_USER: xldadministrator
   POSTGRES_PASSWORD: mysecretpassword
+  #PGDATA: /var/lib/postgresql/data/data
