--- a/xldeploy-k8s/db/postgres-service.yaml
+++ b/xldeploy-k8s/db/postgres-service.yaml
@@ -4,9 +4,11 @@ metadata:
   name: postgres
   labels:
     app: postgres
+    release: "10.4"
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
    - port: 5432
   selector:
    app: postgres
+   release: "10.4"
