--- a/xldeploy-k8s/db/postgres-storage.yaml
+++ b/xldeploy-k8s/db/postgres-storage.yaml
@@ -1,29 +1,14 @@
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: postgres-pv-volume-11
-  labels:
-    type: local
-    app: postgres
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 5Gi
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: "/mnt/data"
----
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: postgres-pv-claim-11
   labels:
     app: postgres
+    release: "10.4"
 spec:
-  storageClassName: manual
+  #storageClassName: gp2
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
