--- a/xldeploy-k8s/xldeploy-service.yaml
+++ b/xldeploy-k8s/xldeploy-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: xld-service
   labels:
     app: xldeploy
-    release: 8.2.1
+    release: "8.2.1"
 spec:
   type: LoadBalancer
   ports:
@@ -14,4 +14,4 @@ spec:
       name: xld-http-svc
   selector:
     app: xldeploy
-    release: 8.2.1
+    release: "8.2.1"
