--- a/xldeploy-k8s/xldeploy-storage.yaml
+++ b/xldeploy-k8s/xldeploy-storage.yaml
@@ -1,25 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: xld-pv-claim-conf
+  name: xld-pv-claim-configuration
   labels:
     app: xldeploy
+    release: "8.2.1"
 spec:
+  #storageClassName: gp2
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Mi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: xld-pv-claim-ext
-  labels:
-    app: xldeploy
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 1Mi
+      storage: 10Mi
